<resources>
    <string name="app_name">AirLineSchedules</string>
    <string name="submit">Submit</string>
    <string name="origin_port">Origin Country</string>
    <string name="destination_port">Destination Country</string>
    <string name="google_maps_key">AIzaSyBIu5czTDQTP_QcTKCVKQEE0gMragIhN3I</string>
    <string name="air_port">EBB</string>
    <string name="terminal">One</string>
    <string name="schedule_date">14/05/2019</string>
</resources>
