<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- TextView Airport Code -->
        <TextView
            android:id="@+id/txt_airport_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/air_port"
            android:textStyle="bold" />


        <!-- TextView Terminal -->
        <TextView
            android:id="@+id/txt_terminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminal"/>

        <!-- TextView Schedule Time -->
        <TextView
            android:id="@+id/txt_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_date"/>

    </LinearLayout>
